SET(BDIR "${PHMC_SIMULATIONS_BINARY_DIR}/src/")

EXEC_PROGRAM(${CMAKE_SOURCE_DIR}/LeonardQCD/makecmakinput.sh ARGS ${CMAKE_SOURCE_DIR}/LeonardQCD/Makefile.obj.mk ${BDIR}/LEONARDQCDCPP.txt)
file (STRINGS "${BDIR}/LEONARDQCDCPP.txt" CPP_FILES_LEONARDQCD)
MESSAGE("${CPP_FILES_LEONARDQCD}")
STRING(REPLACE " " ";" CPP_FILES_LEONARDQCD ${CPP_FILES_LEONARDQCD})
FOREACH(f ${CPP_FILES_LEONARDQCD})
 LIST(APPEND LEONARDO_LIBFILES "source/${f};")
ENDFOREACH(f)
MESSAGE(${LEONARDO_LIBFILES})
ADD_LIBRARY(leonardo STATIC ${LEONARDO_LIBFILES})